--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>GO!</title>
-
+    <link rel="stylesheet" href="/dist/app.css">
 </head>
 <body>
-<div>
+<h1 class="wrapper">
     GO !
-</div>
+</h1>
 <script src="/dist/app.js"></script>
 
 </body>
